--- a/app/src/main/res/layout/activity_user_register.xml
+++ b/app/src/main/res/layout/activity_user_register.xml
@@ -14,10 +14,10 @@
         android:text="금연 안합니다!!!!!"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/introText"
-        app:layout_constraintTop_toBottomOf="@+id/questionSmokeStart" />
+        app:layout_constraintTop_toBottomOf="@+id/questionSmokeEnd" />
 
     <TextView
-        android:id="@+id/questionSmokeStart"
+        android:id="@+id/questionSmokeEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
