--- a/app/src/main/res/drawable/selector_button.xml
+++ b/app/src/main/res/drawable/selector_button.xml
@@ -3,14 +3,16 @@
     <item android:state_selected="true">
         <shape>
             <solid android:color="#9100f9" />
-            <corners android:radius="10dp" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
     <item android:state_selected="false">
         <shape>
-            <solid android:color="#dddddd" />
-            <corners android:radius="10dp" />
+            <solid android:color="#ffffff" />
+            <corners android:radius="3dp" />
+            <stroke android:width="1dp" android:color="#dddddd" />
         </shape>
+
     </item>
 
 </selector>
